Update Attention to Detail.html

--- a/Attention to Detail.html
+++ b/Attention to Detail.html
@@ -72,6 +72,7 @@
         function generateRandomString(type, length) {
             const digits = '0123456789';
             const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
+            const uppercaseLetters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
             let result = '';
             
             if (type === 'numeric' || type === 'money') {
