--- a/Attention to Detail.html
+++ b/Attention to Detail.html
@@ -64,7 +64,7 @@
         .modified-box {
             position: absolute;
             font-size: 20px;
-            font-weight: bold;
+            font-weight: ;
             color: white;
             background: #1C1C1C;
             padding: 10px;
